@@ -1,7 +1,7 @@
 *********************************************************
 *   History of changes for FreeRapid Downloader         *
 *   WebSite: http://wordrider.net/freerapid             *
-*   Mail: info@wordrider.net                            *
+*   Mail: info@wordrider.net (use rather issue tracker) *
 *   Issue tracker: http://bugtracker.wordrider.net/     *
 *********************************************************
 Thanks to all individuals who reported bugs.
@@ -10,6 +10,13 @@ Legend :
 Added - indicates new functionality or new part of distribution
 Changed - indicates a change in using/behavior FreeRapid
 Fixed - indicates a bug fix
+
+20th October 2008 - FreeRapid Downloader 0.66 released
+  Added : new download state WAIT! to show user "you have to wait XX minutes"
+  Changed : remapped selection keys - HOME - first row , END - last row, ctrl+HOME - first column, ctrl+END - last column
+  Changed : updated czech translation
+  Fixed : PAUSED state sometimes runs another download
+
 
 8th October 2008 - FreeRapid Downloader 0.65 released
   Added : plugins - support for letibit.com [FS#25 - requested by Chris C., implemented by Lukiz] 
